@startuml
'https://plantuml.com/sequence-diagram

class App {
    ArrayList<String> input
    List<HashMap<String, String>> listOfWords
    output();
}
class ReadFile {
    getInput();
}
class WordFinder {
    int count;
    int listCount;
    findWords();
    frequencyFinder();
}
App <|-- ReadFile
App <|-- WordFinder
@enduml